objects/vlocity_cmt__ContextScope__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EntityPath__c</fullName>
        <label>Entity Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Entity__c</fullName>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ScopeType__c</fullName>
        <label>Scope Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Session</fullName>
                </value>
                <value>
                    <fullName>Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Context Scope</label>
    <nameField>
        <label>Context Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Context Scopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>